[package]
name = "gateway-kinesis-lambda-test"
version = "0.1.0"
authors = ["Dan Aharon <dan@danielaharon.com>"]
edition = "2018"

[dependencies]
envy = "0.4.0"
log = "0.4"
simplelog = "0.5.3"
lambda_runtime = "0.2.1"
aws_lambda_events = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cdrs = "2.1.0"
